syntax = "proto3";

package bluetooth.l2cap;

import "google/protobuf/empty.proto";
import "facade/common.proto";

service L2capModuleFacade {
  rpc NoOp(google.protobuf.Empty) returns (google.protobuf.Empty) {}
}
